@@ -1,5 +1,7 @@
 package universalis;
 
+import universalis.events.GameEvent;
+import universalis.events.GameEventBus;
 import universalis.map.Map;
 import universalis.map.Nation;
 import universalis.map.factory.NationFactory;
@@ -11,7 +13,7 @@ import universalis.strategy.OffensiveStrategy;
 import java.util.*;
 
 public class Universalis {
-    public static final int[][] DIRECTIONS = {{1,0},{-1,0},{0,1},{0,-1}};
+    public static final int[][] DIRECTIONS = { { 1, 0 }, { -1, 0 }, { 0, 1 }, { 0, -1 } };
     private static final int MAX_TURNS = 250;
     private static final int MAX_NAME_LENGTH = 10;
 
@@ -21,27 +23,52 @@ public class Universalis {
     private final Map map;
     private final List<Nation> nations = new ArrayList<>();
     private final Random rng;
+    private int turnDelay = 0;
 
     public Universalis(Map map, List<Nation> nations) {
         this(map, nations, new Random());
     }
 
     public Universalis(Map map, List<Nation> nations, Random rng) {
-        if (map == null) throw new IllegalArgumentException("map required");
+        if (map == null)
+            throw new IllegalArgumentException("map required");
         this.map = map;
-        if (nations != null) this.nations.addAll(nations);
+        if (nations != null)
+            this.nations.addAll(nations);
         this.rng = rng == null ? new Random() : rng;
     }
 
-    public Map getMap() { return map; }
-    public List<Nation> getNations() { return Collections.unmodifiableList(nations); }
+    public void setTurnDelay(int delayMs) {
+        this.turnDelay = delayMs;
+    }
+
+    public int getTurnDelay() {
+        return turnDelay;
+    }
+
+    public Map getMap() {
+        return map;
+    }
+
+    public List<Nation> getNations() {
+        return Collections.unmodifiableList(nations);
+    }
 
     // run a fixed number of turns
     public void runTurns(int turns) {
         for (int turn = 1; turn <= turns && nations.size() > 1; turn++) {
-            for (Nation nation : new ArrayList<>(nations)) nation.takeTurn(this);
+            for (Nation nation : new ArrayList<>(nations))
+                nation.takeTurn(this);
             nations.removeIf(nation -> nation.getProvinceCount() == 0);
             distributeDevelopmentPoints();
+            GameEventBus.getInstance().publish(new GameEvent(GameEvent.Type.TURN_COMPLETED, this));
+            if (turnDelay > 0) {
+                try {
+                    Thread.sleep(turnDelay);
+                } catch (InterruptedException e) {
+                    // ignore
+                }
+            }
         }
     }
 
@@ -50,18 +77,31 @@ public class Universalis {
         int turn = 0;
         int idleTurns = 0;
         int lastOwned = totalOwnedProvinces();
-        while (nations.size() > 1) {
+        while (nations.size() > 1 && turn < 10000) {
 
             // print map state probably not necessary when UI is implemented
             System.out.println(this);
 
             turn++;
-            for (Nation nation : new ArrayList<>(nations)) nation.takeTurn(this);
+            for (Nation nation : new ArrayList<>(nations))
+                nation.takeTurn(this);
             nations.removeIf(nation -> nation.getProvinceCount() == 0);
             distributeDevelopmentPoints();
+            GameEventBus.getInstance().publish(new GameEvent(GameEvent.Type.TURN_COMPLETED, this));
+
+            if (turnDelay > 0) {
+                try {
+                    Thread.sleep(turnDelay);
+                } catch (InterruptedException e) {
+                    // ignore
+                }
+            }
 
             int currentOwnedProvinces = totalOwnedProvinces();
-            if (currentOwnedProvinces == lastOwned) idleTurns++; else idleTurns = 0;
+            if (currentOwnedProvinces == lastOwned)
+                idleTurns++;
+            else
+                idleTurns = 0;
             lastOwned = currentOwnedProvinces;
             if (MAX_TURNS > 0 && idleTurns >= MAX_TURNS) {
                 System.out.println("Stalemate detected after " + idleTurns + " idle turns. Aborting.");
@@ -70,25 +110,38 @@ public class Universalis {
         }
 
         System.out.println("Took " + turn + " turns.");
-        String winner = nations.isEmpty() ? "None" : nations.getFirst().getName();
-        System.out.println("Finished. Winner: " + winner);
+        if (!nations.isEmpty()) {
+            Nation winner = nations.get(0);
+            System.out.println("Finished. Winner: " + winner.getName());
+            System.out.println("=== Game Metrics ===");
+            System.out.println("  - Total Provinces: " + winner.getProvinceCount());
+            System.out.println("  - Total Development: " + winner.getTotalDevelopment());
+            System.out.println("  - Final Army Size: " + winner.getArmy());
+            System.out.println("====================");
+        } else {
+            System.out.println("Finished. No winner.");
+        }
+        GameEventBus.getInstance().publish(new GameEvent(GameEvent.Type.GAME_FINISHED, this));
     }
 
     private int totalOwnedProvinces() {
         int sum = 0;
-        for (Nation nation : new ArrayList<>(nations)) sum += nation.getProvinceCount();
+        for (Nation nation : new ArrayList<>(nations))
+            sum += nation.getProvinceCount();
         return sum;
     }
 
     /**
-     * nations get half of their total provinces in development to distribute randomly
+     * nations get half of their total provinces in development to distribute
+     * randomly
      */
     private void distributeDevelopmentPoints() {
         for (Nation nation : new ArrayList<>(nations)) {
             int points = Math.max(0, nation.getProvinceCount() / DEVELOPMENT_PROVINCE_FACTOR);
             for (int i = 0; i < points; i++) {
                 List<Province> list = nation.getProvinces();
-                if (list.isEmpty()) break;
+                if (list.isEmpty())
+                    break;
                 Province province = list.get(rng.nextInt(list.size()));
                 province.changeDevelopment(INCREASE_DEVELOPMENT_VALUE);
             }
@@ -106,7 +159,8 @@ public class Universalis {
             for (int col = 0; col < width; col++) {
                 Province province = map.getProvince(col, row);
                 String ownerName = province.getOwner() == null ? "." : province.getOwner().getName();
-                String ownerShort = ownerName.length() > MAX_NAME_LENGTH ? ownerName.substring(0, MAX_NAME_LENGTH) : ownerName;
+                String ownerShort = ownerName.length() > MAX_NAME_LENGTH ? ownerName.substring(0, MAX_NAME_LENGTH)
+                        : ownerName;
                 sb.append(String.format("%2d:%-10s ", province.getDevelopment(), ownerShort));
             }
             sb.append("\n");
@@ -116,7 +170,8 @@ public class Universalis {
         for (Nation nation : nations) {
             int count = nation.getProvinceCount();
             int totalDev = nation.getTotalDevelopment();
-            sb.append(String.format("%s - provinces=%d, totalDev=%d, army=%d\n", nation.getName(), count, totalDev, nation.getArmy()));
+            sb.append(String.format("%s - provinces=%d, totalDev=%d, army=%d\n", nation.getName(), count, totalDev,
+                    nation.getArmy()));
         }
         sb.append("===============================");
         return sb.toString();
@@ -126,9 +181,12 @@ public class Universalis {
      * Helper to create a ready-to-run Universalis instance.
      */
     public static Universalis setupDefaultGame(int size, int numNations) {
-        if (size <= 0) throw new IllegalArgumentException("invalid size");
-        if (numNations <= 0) throw new IllegalArgumentException("numNations must be > 0");
-        if (numNations > size * size) throw new IllegalArgumentException("too many nations for map size");
+        if (size <= 0)
+            throw new IllegalArgumentException("invalid size");
+        if (numNations <= 0)
+            throw new IllegalArgumentException("numNations must be > 0");
+        if (numNations > size * size)
+            throw new IllegalArgumentException("too many nations for map size");
 
         List<Nation> nations = new ArrayList<>(numNations);
         Random rng = new Random();
@@ -137,9 +195,15 @@ public class Universalis {
             Nation nation = NationFactory.createRandomNation();
             int pick = rng.nextInt(3);
             switch (pick) {
-                case 0: nation.setStrategy(new NoOpStrategy()); break;
-                case 1: nation.setStrategy(new OffensiveStrategy(rng)); break;
-                default: nation.setStrategy(new DefensiveStrategy()); break;
+                case 0:
+                    nation.setStrategy(new NoOpStrategy());
+                    break;
+                case 1:
+                    nation.setStrategy(new OffensiveStrategy(rng));
+                    break;
+                default:
+                    nation.setStrategy(new DefensiveStrategy());
+                    break;
             }
             nations.add(nation);
         }
